finish web phase one, item, task, tags curds

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -482,5 +482,76 @@
     "TELEGRAM_SIZE": "الحجم",
     "TELEGRAM_TYPE": "النوع",
     "TELEGRAM_DATE": "التاريخ",
-    "TELEGRAM_GET_CHANNEL_ID": "الحصول على معرف القناة"
+    "TELEGRAM_GET_CHANNEL_ID": "الحصول على معرف القناة",
+    "TELEGRAM_FILE": "ملف تليجرام",
+
+    "ITEMS": "العناصر",
+    "ITEMS_ADD": "إضافة عنصر",
+    "ITEMS_EDIT": "تعديل",
+    "ITEMS_VIEW": "عرض",
+    "ITEMS_DELETE": "حذف",
+    "ITEMS_DELETE_CONFIRM": "هل أنت متأكد من حذف هذا العنصر؟",
+    "ITEMS_TITLE": "العنوان",
+    "ITEMS_TYPE": "النوع",
+    "ITEMS_STATUS": "الحالة",
+    "ITEMS_CONTENT": "المحتوى",
+    "ITEMS_EXPIRES_AT": "ينتهي في",
+    "ITEMS_EXPIRED": "منتهي",
+    "ITEMS_EXPIRING_SOON": "قريباً ينتهي",
+    "ITEMS_SOURCE": "المصدر",
+    "ITEMS_SOURCE_OPTIONAL": "— اختياري —",
+    "ITEMS_TAGS": "الوسوم",
+    "ITEMS_TAGS_HINT": "استخدم Ctrl/Cmd لاختيار أكثر من واحد",
+    "ITEMS_TASK_FIELDS": "تفاصيل المهمة",
+    "ITEMS_PRIORITY": "الأولوية",
+    "ITEMS_DUE_DATE": "تاريخ الاستحقاق",
+    "ITEMS_TASK_STATUS": "حالة المهمة",
+    "ITEMS_ALL": "الكل",
+    "ITEMS_FILTER": "تصفية",
+    "ITEMS_CLEAR": "مسح",
+    "ITEMS_SAVE": "حفظ",
+    "ITEMS_CREATED": "تم إنشاء العنصر بنجاح.",
+    "ITEMS_UPDATED": "تم تحديث العنصر بنجاح.",
+    "ITEMS_ERROR": "حدث خطأ. يرجى المحاولة مرة أخرى.",
+
+    "TAGS": "الوسوم",
+    "TAGS_ADD": "إضافة وسم",
+    "TAGS_EDIT": "تعديل",
+    "TAGS_VIEW": "عرض",
+    "TAGS_DELETE": "حذف",
+    "TAGS_NAME": "الاسم",
+    "TAGS_ITEMS_COUNT": "عدد العناصر",
+    "TAGS_LINKED_ITEMS": "العناصر المرتبطة",
+    "TAGS_SAVE": "حفظ",
+    "TAGS_CREATED": "تم إنشاء الوسم بنجاح.",
+    "TAGS_UPDATED": "تم تحديث الوسم بنجاح.",
+    "TAGS_DELETE_CONFIRM": "هل أنت متأكد من حذف هذا الوسم؟",
+    "TAGS_ERROR": "حدث خطأ. يرجى المحاولة مرة أخرى.",
+
+    "TASKS": "المهام",
+    "TASKS_ITEM": "العنصر",
+    "TASKS_PRIORITY": "الأولوية",
+    "TASKS_DUE_DATE": "تاريخ الاستحقاق",
+    "TASKS_DUE_FROM": "استحق من",
+    "TASKS_DUE_TO": "استحق حتى",
+    "TASKS_STATUS": "الحالة",
+    "TASKS_ADD_ITEM": "إضافة مهمة (عنصر جديد)",
+    "TASKS_NO_RESULTS": "لم يتم العثور على مهام.",
+
+    "ITEM_NOTIFICATIONS": "إشعارات العناصر",
+    "ITEM_NOTIFICATIONS_ITEM": "العنصر",
+    "ITEM_NOTIFICATIONS_ITEM_ID": "معرف العنصر",
+    "ITEM_NOTIFICATIONS_TYPE": "النوع",
+    "ITEM_NOTIFICATIONS_SENT_AT": "تاريخ الإرسال",
+    "ITEM_NOTIFICATIONS_CHANNEL": "القناة",
+    "ITEM_NOTIFICATIONS_FROM_DATE": "من تاريخ",
+    "ITEM_NOTIFICATIONS_TO_DATE": "إلى تاريخ",
+
+    "WEEKLY_REPORTS": "التقارير الأسبوعية",
+    "WEEKLY_REPORTS_PERIOD_START": "بداية الفترة",
+    "WEEKLY_REPORTS_PERIOD_END": "نهاية الفترة",
+    "WEEKLY_REPORTS_SUMMARY": "الملخص",
+    "WEEKLY_REPORTS_SENT_AT": "تاريخ الإرسال",
+    "WEEKLY_REPORTS_SYSTEM_CREATED": "يتم إنشاء التقارير بواسطة النظام.",
+    "SELECT_TELEGRAM_FILE": "اختر ملف تليجرام"
 }
