--- a/lang/en.json
+++ b/lang/en.json
@@ -480,5 +480,76 @@
     "TELEGRAM_SIZE": "Size",
     "TELEGRAM_TYPE": "Type",
     "TELEGRAM_DATE": "Date",
-    "TELEGRAM_GET_CHANNEL_ID": "Get Channel ID"
+    "TELEGRAM_GET_CHANNEL_ID": "Get Channel ID",
+    "TELEGRAM_FILE": "Telegram File",
+
+    "ITEMS": "Items",
+    "ITEMS_ADD": "Add item",
+    "ITEMS_EDIT": "Edit",
+    "ITEMS_VIEW": "View",
+    "ITEMS_DELETE": "Delete",
+    "ITEMS_DELETE_CONFIRM": "Are you sure you want to delete this item?",
+    "ITEMS_TITLE": "Title",
+    "ITEMS_TYPE": "Type",
+    "ITEMS_STATUS": "Status",
+    "ITEMS_CONTENT": "Content",
+    "ITEMS_EXPIRES_AT": "Expires at",
+    "ITEMS_EXPIRED": "Expired",
+    "ITEMS_EXPIRING_SOON": "Expiring soon",
+    "ITEMS_SOURCE": "Source",
+    "ITEMS_SOURCE_OPTIONAL": "— Optional —",
+    "ITEMS_TAGS": "Tags",
+    "ITEMS_TAGS_HINT": "Hold Ctrl/Cmd to select multiple",
+    "ITEMS_TASK_FIELDS": "Task details",
+    "ITEMS_PRIORITY": "Priority",
+    "ITEMS_DUE_DATE": "Due date",
+    "ITEMS_TASK_STATUS": "Task status",
+    "ITEMS_ALL": "All",
+    "ITEMS_FILTER": "Filter",
+    "ITEMS_CLEAR": "Clear",
+    "ITEMS_SAVE": "Save",
+    "ITEMS_CREATED": "Item created successfully.",
+    "ITEMS_UPDATED": "Item updated successfully.",
+    "ITEMS_ERROR": "An error occurred. Please try again.",
+
+    "TAGS": "Tags",
+    "TAGS_ADD": "Add tag",
+    "TAGS_EDIT": "Edit",
+    "TAGS_VIEW": "View",
+    "TAGS_DELETE": "Delete",
+    "TAGS_NAME": "Name",
+    "TAGS_ITEMS_COUNT": "Items count",
+    "TAGS_LINKED_ITEMS": "Linked items",
+    "TAGS_SAVE": "Save",
+    "TAGS_CREATED": "Tag created successfully.",
+    "TAGS_UPDATED": "Tag updated successfully.",
+    "TAGS_DELETE_CONFIRM": "Are you sure you want to delete this tag?",
+    "TAGS_ERROR": "An error occurred. Please try again.",
+
+    "TASKS": "Tasks",
+    "TASKS_ITEM": "Item",
+    "TASKS_PRIORITY": "Priority",
+    "TASKS_DUE_DATE": "Due date",
+    "TASKS_DUE_FROM": "Due from",
+    "TASKS_DUE_TO": "Due to",
+    "TASKS_STATUS": "Status",
+    "TASKS_ADD_ITEM": "Add task (new item)",
+    "TASKS_NO_RESULTS": "No tasks found.",
+
+    "ITEM_NOTIFICATIONS": "Item notifications",
+    "ITEM_NOTIFICATIONS_ITEM": "Item",
+    "ITEM_NOTIFICATIONS_ITEM_ID": "Item ID",
+    "ITEM_NOTIFICATIONS_TYPE": "Type",
+    "ITEM_NOTIFICATIONS_SENT_AT": "Sent at",
+    "ITEM_NOTIFICATIONS_CHANNEL": "Channel",
+    "ITEM_NOTIFICATIONS_FROM_DATE": "From date",
+    "ITEM_NOTIFICATIONS_TO_DATE": "To date",
+
+    "WEEKLY_REPORTS": "Weekly reports",
+    "WEEKLY_REPORTS_PERIOD_START": "Period start",
+    "WEEKLY_REPORTS_PERIOD_END": "Period end",
+    "WEEKLY_REPORTS_SUMMARY": "Summary",
+    "WEEKLY_REPORTS_SENT_AT": "Sent at",
+    "WEEKLY_REPORTS_SYSTEM_CREATED": "Reports are created by the system.",
+    "SELECT_TELEGRAM_FILE": "Select Telegram File"
 }
