redesign the items index page

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -118,6 +118,8 @@
     "NAME": "الاسم",
     "EMAIL": "البريد الإلكتروني",
     "PASSWORD": "كلمة المرور",
+    "SHOW_PASSWORD": "إظهار كلمة المرور",
+    "HIDE_PASSWORD": "إخفاء كلمة المرور",
     "CONFIRM_PASSWORD": "تأكيد كلمة المرور",
     "SUBMIT": "إرسال",
     "CANCEL": "الغاء",
@@ -333,6 +335,14 @@
     "ERROR": "حدث خطأ، يرجى المحاولة مرة أخرى",
     "LOADING": "جار التحميل...",
     "NO_RESULTS_FOUND": "لم يتم العثور على نتائج",
+    "PAGINATION_NAV": "ترقيم الصفحات",
+    "PAGINATION_PREVIOUS": "السابق",
+    "PAGINATION_NEXT": "التالي",
+    "PAGINATION_SHOWING": "عرض",
+    "PAGINATION_TO": "إلى",
+    "PAGINATION_OF": "من",
+    "PAGINATION_RESULTS": "نتيجة",
+    "PAGINATION_PAGE": "الصفحة :page",
     "WELCOME_BACK": "مرحبًا بعودت!",
     "ACCOUNT_CREATED": "تم إنشاء حسابك",
     "PASSWORD_UPDATED": "تم تحديث كلمة المرور الخاصة بك",
