--- a/lang/en.json
+++ b/lang/en.json
@@ -117,6 +117,8 @@
     "NAME": "Name",
     "EMAIL": "Email",
     "PASSWORD": "Password",
+    "SHOW_PASSWORD": "Show password",
+    "HIDE_PASSWORD": "Hide password",
     "CONFIRM_PASSWORD": "Confirm Password",
     "SUBMIT": "Submit",
     "CANCEL": "Cancel",
@@ -330,6 +332,14 @@
     "ERROR": "An error occurred, please try again",
     "LOADING": "Loading...",
     "NO_RESULTS_FOUND": "No results found",
+    "PAGINATION_NAV": "Pagination",
+    "PAGINATION_PREVIOUS": "Previous",
+    "PAGINATION_NEXT": "Next",
+    "PAGINATION_SHOWING": "Showing",
+    "PAGINATION_TO": "to",
+    "PAGINATION_OF": "of",
+    "PAGINATION_RESULTS": "results",
+    "PAGINATION_PAGE": "Page :page",
     "WELCOME_BACK": "Welcome back, {name}!",
     "ACCOUNT_CREATED": "Your account has been created",
     "PASSWORD_UPDATED": "Your password has been updated",
