redesign the tag selction to look cool in the item pages

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -512,6 +512,12 @@
     "ITEMS_SOURCE_OPTIONAL": "— اختياري —",
     "ITEMS_TAGS": "الوسوم",
     "ITEMS_TAGS_HINT": "استخدم Ctrl/Cmd لاختيار أكثر من واحد",
+    "ITEMS_TAGS_SELECT": "اختر الوسوم",
+    "ITEMS_TAGS_SELECTED": "محدد",
+    "ITEMS_TAGS_MODAL_SUBTITLE": "اختر الوسوم لربطها بهذا العنصر.",
+    "ITEMS_TAGS_SEARCH_PLACEHOLDER": "بحث الوسوم",
+    "ITEMS_TAGS_NO_MATCH": "لا توجد وسوم تطابق البحث.",
+    "ITEMS_TAGS_DONE": "تم",
     "ITEMS_TASK_FIELDS": "تفاصيل المهمة",
     "ITEMS_PRIORITY": "الأولوية",
     "ITEMS_DUE_DATE": "تاريخ الاستحقاق",
