--- a/lang/en.json
+++ b/lang/en.json
@@ -510,6 +510,12 @@
     "ITEMS_SOURCE_OPTIONAL": "— Optional —",
     "ITEMS_TAGS": "Tags",
     "ITEMS_TAGS_HINT": "Hold Ctrl/Cmd to select multiple",
+    "ITEMS_TAGS_SELECT": "Select tags",
+    "ITEMS_TAGS_SELECTED": "selected",
+    "ITEMS_TAGS_MODAL_SUBTITLE": "Select tags to associate with this item.",
+    "ITEMS_TAGS_SEARCH_PLACEHOLDER": "Search tags",
+    "ITEMS_TAGS_NO_MATCH": "No tags match your search.",
+    "ITEMS_TAGS_DONE": "Done",
     "ITEMS_TASK_FIELDS": "Task details",
     "ITEMS_PRIORITY": "Priority",
     "ITEMS_DUE_DATE": "Due date",
